tests/sksl/errors/InterfaceBlockScope.sksl
uniform testBlock {
    float x;
} test[x];
